Sun Oct 14 00:33:10 BST 2007  Colin Watson  <cjwatson@debian.org>

	* README: Remove several restrictions lifted by the conversion to
	  Automake. Remove documentation of how to install native language
	  manual pages, since this is now done unconditionally. Remove
	  documentation of the update target, which no longer exists and
	  should no longer be needed.

	* docs/NEWS: Document conversion to Automake.

Sun Oct 14 00:22:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	Convert to Automake. This fixes VPATH builds, fixes a number of bugs
	in areas such as dependency generation, provides new features such
	as 'make distcheck', moves complexity into autogenerated code, and
	prepares the way for using Gnulib more effectively.

	* makefile.in, include/Defines.in: Remove.
	* GNUmakefile.in, lib/Makefile.in, libdb/Makefile.in,
	  man/Makefile.in, manual/Makefile.in, src/Makefile.in: Translate to
	  Automake and move to ...
	* Makefile.am, lib/Makefile.am, libdb/Makefile.am, man/Makefile.am,
	  manual/Makefile.am, src/Makefile.am: ... here.
	* docs/Makefile.am, tools/Makefile.am: Build these directories
	  separately.
	* man/Rules.man, man/de.UTF-8/Makefile.am, man/es.UTF-8/Makefile.am,
	  man/fr.UTF-8/Makefile.am, man/it.UTF-8/Makefile.am,
	  man/ja.UTF-8/Makefile.am: Build manual pages recursively, as it
	  makes VPATH builds easier.
	* Makefile.in, docs/Makefile.in, lib/Makefile.in, libdb/Makefile.in,
	  man/Makefile.in, man/de.UTF-8/Makefile.in,
	  man/es.UTF-8/Makefile.in, man/fr.UTF-8/Makefile.in,
	  man/it.UTF-8/Makefile.in, man/ja.UTF-8/Makefile.in,
	  manual/Makefile.in, src/Makefile.in, tools/Makefile.in: Add
	  generated files.
	* README: Remove mention of include/Defines.
	* autogen.sh: Call automake-1.10 --add-missing --copy.
	* m4/man-trans-subst.m4: New macro.
	* configure.ac: Various changes for Automake. AC_SUBST man_owner,
	  and set man_mode rather than man_install_flags. Set
	  config_file_dirname. Calculate transformed versions of program