@@ -1,3 +1,10 @@
+Sun Oct 14 00:40:26 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* man-db.lsm: Move to ...
+	* docs/man-db.lsm: ... here.
+	* Makefile.am, docs/Makefile.am: Move man-db.lsm reference.
+	* Makefile.in, docs/Makefile.in: Regenerate.
+
 Sun Oct 14 00:33:10 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* README: Remove several restrictions lifted by the conversion to
